--- a/backup.yml
+++ b/backup.yml
@@ -37,7 +37,7 @@
 
     - name: Log authentication
       debug:
-        msg: "🔐 Autenticazione OpenStack: {{ 'Project ID (UUID)' if use_project_id else 'Project Name' }} = {{ openstack_project_id if use_project_id else openstack_project_name }}"
+        msg: " Autenticazione OpenStack: {{ 'Project ID (UUID)' if use_project_id else 'Project Name' }} = {{ openstack_project_id if use_project_id else openstack_project_name }}"
 
     - name: Authenticate with project ID
       uri:
@@ -99,7 +99,7 @@
 
     - name: Log successful authentication
       debug:
-        msg: "✅ Autenticato su OpenStack | Tenant: {{ tenant_name }}"
+        msg: " Autenticato su OpenStack | Tenant: {{ tenant_name }}"
     
     # =============================================
     # 3. VERIFICA ESISTENZA VOLUME
@@ -160,7 +160,7 @@
       rescue:
         - name: Handle OpenStack API error
           debug:
-            msg: "⚠️ Errore accesso OpenStack API - impossibile verificare esistenza volume"
+            msg: " Errore accesso OpenStack API - impossibile verificare esistenza volume"
         
         - name: Use fallback volume name
           set_fact:
