--- a/delete_loadbalancer.yaml
+++ b/delete_loadbalancer.yaml
@@ -61,7 +61,7 @@
           - openstack_username is defined
           - openstack_password is defined
           - openstack_project_id is defined or openstack_project_name is defined
-        fail_msg: "❌ Credenziali OpenStack mancanti!"
+        fail_msg: " Credenziali OpenStack mancanti!"
 
     - name: Determine authentication method
       set_fact:
@@ -69,7 +69,7 @@
 
     - name: Log authentication
       debug:
-        msg: "🔐 Autenticazione OpenStack: {{ 'Project ID (UUID)' if use_project_id else 'Project Name' }} = {{ openstack_project_id if use_project_id else openstack_project_name }}"
+        msg: " Autenticazione OpenStack: {{ 'Project ID (UUID)' if use_project_id else 'Project Name' }} = {{ openstack_project_id if use_project_id else openstack_project_name }}"
 
     - name: Authenticate with project ID
       uri:
@@ -137,7 +137,7 @@
 
     - name: Log successful authentication
       debug:
-        msg: "✅ Autenticato su OpenStack | Tenant: {{ openstack_project_name | default(openstack_project_id) }}"
+        msg: " Autenticato su OpenStack | Tenant: {{ openstack_project_name | default(openstack_project_id) }}"
 
     # ========================================
     # FIND OCTAVIA ENDPOINT
@@ -260,7 +260,7 @@
 
     - name: Log deletion initiated
       debug:
-        msg: "🗑️  Eliminazione Load Balancer avviata (cascade=true)"
+        msg: "  Eliminazione Load Balancer avviata (cascade=true)"
 
     # ========================================
     # WAIT FOR DELETION TO COMPLETE
