--- a/maneggio.yaml
+++ b/maneggio.yaml
@@ -81,8 +81,8 @@
         msg: |
            ERRORE DI SICUREZZA: Lo schedule non appartiene al tenant selezionato!
           
-          Tenant selezionato: {{ tenant_name }}
-          Tenant dello schedule: {{ schedule_tenant | default('NON SPECIFICATO') }}
+          Tenant selezionato: "{{ tenant_name }}"
+          Tenant dello schedule: "{{ schedule_tenant | default('NON SPECIFICATO') }}"
           
           Non puoi gestire schedule di altri tenant!
       when: 
